--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,2 +1,2 @@
 en:
-  video_html: "<ifrae class='video_code' style='display:none' src='http://player.vimeo.com/video/30184897?title=0&amp;byline=0&amp;portrait=0' width='820' height='462' frameborder='0' webkitAllowFullScreen allowFullScreen></iframe>"
+  title: iSafePlayer - iPhone anti-theft music player, protect your iphone been stolen.
