--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,6 @@
 en:
   title: iSafePlayer - iPhone anti-theft music player, protect your iphone been stolen.
+  twitter_html: <a href='http://twitter.com/#!/hlxwell'>Twitter</a>
   menus:
     home: Home
     feedback: Feedback
