add missing translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 en:
   title: iSafePlayer - iPhone anti-theft music player, protect your iphone been stolen.
   twitter_html: <a href='http://twitter.com/#!/hlxwell'>Twitter</a>
+  create_success: Create Success
   menus:
     home: Home
     feedback: Feedback
