--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -1,6 +1,7 @@
 zh:
   title: iSafePlayer - 防盗音乐播放器，帮助你免除手机被盗之忧。
   twitter_html: <a href='http://weibo.com/hlxwell' target='_blank'>新浪微博</a>
+  create_success: 创建成功
   menus:
     home: 首页
     feedback: 反馈
